# Client

./: CMakeLists.txt
cli/: main.cpp
gui/: main.cpp
gui/common/: QClickableLabel.cpp  QClickableLabel.h
gui/ts/: client-gui.ts
gui/ui/login/: login.cpp  login.h  login.ui
gui/ui/session/: session.cpp  session.cpp.hv5928  session.h  session.ui
gui/ui/session_info/: session_info.cpp  session_info.h  session_info.ui
gui/ui/settings/: settings.cpp  settings.h
